haldol/include/detail.hh

typedef _PyArray_Descr PyArray_Descr;
typedef tagPyArrayObject PyArrayObject;
    
    PyObject* None();
    PyObject* True();
    PyObject* False();
    
    PyObject* boolean(bool truth = false);
    PyObject* string(std::string const&);
    PyObject* string(std::wstring const&);
    PyObject* string(bytevec_t const&);
    PyObject* string(charvec_t const&);
    PyObject* string(char const*);
    PyObject* string(char const*, std::size_t);
    PyObject* string(char);
    // PyObject* format(std::string const&, ...);
    PyObject* object(PyObject* arg);
    PyObject* object(PyFileObject* arg);
    PyObject* object(PyStringObject* arg);
    PyObject* object(PyTypeObject* arg);
    PyObject* object(PyArrayObject* arg);
    PyObject* object(PyArray_Descr* arg);
    
    PyObject* convert(PyObject*);
    PyObject* convert(PyFileObject*);
    PyObject* convert(PyStringObject*);
    PyObject* convert(PyTypeObject*);
    PyObject* convert(PyArrayObject*);
    PyObject* convert(PyArray_Descr*);
    PyObject* convert(std::nullptr_t);
    PyObject* convert(void);
    PyObject* convert(void*);
    PyObject* convert(bool);
    PyObject* convert(std::size_t);
    PyObject* convert(Py_ssize_t);
    PyObject* convert(int8_t);
    PyObject* convert(int16_t);
    PyObject* convert(int32_t);
    PyObject* convert(int64_t);
    PyObject* convert(uint8_t);
    PyObject* convert(uint16_t);
    PyObject* convert(uint32_t);
    PyObject* convert(uint64_t);
    PyObject* convert(float);
    PyObject* convert(double);
    PyObject* convert(long double);
    PyObject* convert(char*);
    PyObject* convert(char const*);
    PyObject* convert(std::string const&);
    PyObject* convert(char*, std::size_t);
    PyObject* convert(char const*, std::size_t);
    PyObject* convert(std::string const&, std::size_t);
    PyObject* convert(std::wstring const&);
    PyObject* convert(std::wstring const&, std::size_t);
    PyObject* convert(char const*, va_list);
    PyObject* convert(std::string const&, va_list);
    PyObject* convert(Py_buffer*);
    PyObject* convert(std::exception const&);
    
    /* >>>>>>>>>>>>>>>>>>> FORWARD DECLARATIONS <<<<<<<<<<<<<<<<<<<< */
    
    template <typename First, typename Second>
    PyObject* convert(std::pair<First, Second> pair);
    
    template <typename ...Args>
    PyObject* convert(std::tuple<Args...> argtuple);
    
    template <typename ...Args>
    PyObject* convert(std::tuple<Args&&...> argtuple);
    
    template <typename Vector,
              typename Value = typename Vector::value_type>
    PyObject* convert(Vector const& vector);
    
    template <typename Mapping,
              typename Value = typename Mapping::mapped_type,
              typename std::enable_if_t<
                       std::is_constructible<std::string,
                                             typename Mapping::key_type>::value,
              int> = 0>
    PyObject* convert(Mapping const& mapping);
    
    /* >>>>>>>>>>>>>>>>>>> EXPLICIT CASTS <<<<<<<<<<<<<<<<<<<< */
    
    template <typename Cast,
              typename Original,
              typename std::enable_if_t<std::is_arithmetic<Cast>::value &&
                                        std::is_arithmetic<Original>::value,
              int> = 0> inline
    PyObject* convert(Original orig) {
        return py::convert(static_cast<Cast>(orig));
    }
    
    template <typename Cast,
              typename Original,
              typename std::enable_if_t<!std::is_arithmetic<Cast>::value &&
                                        !std::is_arithmetic<Original>::value,
              int> = 0> inline
    PyObject* convert(Original orig) {
        return py::convert(reinterpret_cast<Cast>(orig));
    }
    
    template <typename ...Args>
    using convertible = std::is_same<std::add_pointer_t<PyObject>,
                                     std::common_type_t<
                                         decltype(
                                      py::convert(std::declval<Args>()))...>>;
    
    template <typename ...Args>
    __attribute__((nonnull(1)))
    PyObject* convert(char const* formatstring, bool disambiguate, Args&&... args) {
        /// trigger compile-time type checks for printf-style variadics
        /// -- this is a no-op at runtime:
        static_argcheck(disambiguate,
                        formatstring,
                        std::forward<Args>(args)...);
        
        /// dispatch using argument pack companded as a va_list:
        return py::convert(formatstring,
               py::impl::argcompand(nullptr, std::forward<Args>(args)...));
    }
    
    /* >>>>>>>>>>>>>>>>>>> PAIR AND TUPLE CONVERTERS <<<<<<<<<<<<<<<<<<<< */
    
    template <typename First, typename Second>
    PyObject* convert(std::pair<First, Second> pair) {
        using Pair = std::pair<First, Second>;
        using Indices = std::make_index_sequence<2>;
        return py::impl::apply_impl(py::tuplize<First, Second>,
                                    std::forward<Pair>(pair),
                                    Indices());
    }
    
    template <typename ...Args>
    PyObject* convert(std::tuple<Args...> argtuple) {
        using Tuple = std::tuple<Args...>;
        using Indices = std::index_sequence_for<Args...>;
        if (py::impl::tuple_size_v<Tuple> == 0) {
            return py::tuplize();
        }
        return py::impl::apply_impl(py::tuplize<Args...>,
                                    std::forward<Tuple>(argtuple),
                                    Indices());
    }
    
    template <typename ...Args>
    PyObject* convert(std::tuple<Args&&...> argtuple) {
        using Tuple = std::tuple<Args&&...>;
        using Indices = std::index_sequence_for<Args...>;
        if (py::impl::tuple_size_v<Tuple> == 0) {
            return py::tuplize();
        }
        return py::impl::apply_impl(py::tuplize<Args...>,
                                    std::forward<Tuple>(argtuple),
                                    Indices());
    }
    
    /* >>>>>>>>>>>>>>>>>>> GENERIC DECONTAINERIZERS <<<<<<<<<<<<<<<<<<<< */
    
    template <typename Vector, typename Value>
    PyObject* convert(Vector const& vector) {
        Py_ssize_t idx = 0,
                   max = vector.size();
        PyObject* tuple = PyTuple_New(max);
        for (Value const& item : vector) {
            PyTuple_SET_ITEM(tuple, idx, py::convert(item));
            idx++;
        }
        return tuple;
    }
    
    template <typename Mapping, typename Value,
              typename std::enable_if_t<
                       std::is_constructible<std::string,
                                             typename Mapping::key_type>::value,
              int>>
    PyObject* convert(Mapping const& mapping) {
        PyObject* dict = PyDict_New();
        for (auto const& item : mapping) {
            std::string key(item.first);
            PyObject* pytem = py::convert(item.second);
            PyDict_SetItemString(dict, key.c_str(), pytem);
            Py_DECREF(pytem);
        }
        return dict;
    }
    
    /// enum class base-type-izer function,
    /// courtesy http://stackoverflow.com/a/14589519/298171
    template <typename EnumType>
    constexpr auto integralize(EnumType e) -> typename std::underlying_type<EnumType>::type {
       return static_cast<typename std::underlying_type<EnumType>::type>(e);
    }
    
    template <typename EnumType>
    PyObject* integral(EnumType e) {
        return py::convert(py::integralize<EnumType>(e));
    }
    
    /// The py::ref mini-class is a little bitty tiny wrapper around
    /// a PyObject*, intended for casual-friday, C++-y, RAII-diculous scope-based
    /// use in treatment of acute reference-count-induced frontal lobe irritation.
    /// If you dislike having to stick calls to Py_DECREF() all over everything,
    /// and want to generally lexically underscore that a given Python object pointer
    /// -- a PyObject*, as we often say -- is a mere temporary, never to see a lifetime
    /// beyond the scope of its acquisition... well then, you should use py::ref to
    /// simplify your Python/C++ programming experience. Like instead of:
    ///
    ///     PyObject* pyThing = PyObject_SomeAPICall();
    ///     /// your pyThing stuff is herein done
    ///     Py_DECREF(pyThing);
    ///
    /// ... you can basically just do:
    /// 
    ///     py::ref pyThing = PyObject_SomeAPICall();
    ///     /// do the same* pyThing stuff ...
    ///     /// ... but as a chuckling Jobs said c. 1999, THERE IS NO STEP THREE
    ///
    /// ... (*) the fine print: some calls may balk at being passed a py::ref instead of
    /// a vanilla PyObject*, notably macros e.g. PyString_AS_STRING(); you can deal
    /// with those by manually sticking in a get() method call e.g. PyString_AS_STRING(ref.get())
    /// which will inline a return of the wrapped PyObject*. 
    ///
    /// There are convenience template constructors for the creation of a py::ref from
    /// any type that py::convert() can hanlde, e.g.:
    ///
    ///     py::ref ref0 = 3;                               /// ref0 is a PyInt/PyLong
    ///     py::ref ref1 = 3.14159f;                        /// ref1 is a PyFloat
    ///     py::ref ref2 = "Yo Dogg";                       /// ref2 is a PyString
    ///     std::vector<byte> bv = image.plane<byte>(0);
    ///     Py_buffer* view = PyObject_GetBuffer(image);    /// (NB. not really this API call's signature)
    ///     py::buffer::source pyview(*view);               /// ... py::ref can't release a Py_buffer*!
    ///     py::ref ref3 = bv;                              /// ref3 is a PyTuple with bytes from an image's zero-plane
    ///     py::ref ref4 = view;                            /// ref4 is a PyMemoryView on the image buffer-back
    ///     py::ref ref5 = py::string(bv);                  /// ref5 is a PyString-ified copy of ref3's planar byte data
    ///     py::ref ref6 = py::listify(true, 2, "yo dogg"); /// ref6 is a 3-item PyList containing what you think it does
    /// 
    /// ... the above code bits, when evaluated in a scoped context, will clean
    /// themselves up without the need for any additional Python API calls... Hence
    /// the bit up there with py::buffer::source -- many users are often confused by how
    /// PyObject* refcounting is totally separate from the Py_buffer API; relatedly,
    /// a py::ref created from a Py_buffer* doesn't know anything about where
    /// that Py_buffer* came from -- it does not care about what happens to
    /// its referent after the py::convert() call and as such the py::ref will
    /// release its internal temporary PyMemoryView object at scope exit and
    /// leave the dangling Py_buffer* unreleased. So TL;DR use py::buffer::source to
    /// do separate Py_buffer* scope-sitting alongside py::ref right? You get this.
    
    class ref {
        
        public:
            
            /// A pedantic way to say PyObject*
            using pyptr_t = std::add_pointer_t<PyObject>;
            
            /// py::ref::can_convert<T>::value == true for any (T t) iff
            /// the expression:
            ///
            ///     PyObject* py_t = py::convert(t);
            ///
            /// will successfully compile. (but remember at runtime
            /// who but GvR can know though, I'm just saying doggie)
            template <typename ...Args>
            using can_convert = std::is_same<pyptr_t, std::common_type_t<decltype(
                                                       py::convert(std::declval<Args>()))...>>;
            
            /// default constructor, yields a nullptr referent
            ref() noexcept;
            
            /// explicit boolean constructor, for disabling destructor logic
            explicit ref(bool) noexcept;
            
            /// py::refs are moveable via construction/assignment
            /// ... but *not* copyable as you may note
            ref(ref&& other) noexcept;
            ref& operator=(ref&& other) noexcept;
            
            /// py::refs are constructable/assignable direct from PyObject*
            ref(pyptr_t obj) noexcept;
            ref& operator=(pyptr_t obj) noexcept;
            
            /// conditionally-enabled templates to allow direct construction
            /// and/or assignment of py::refs from ANY type that can
            /// be successfully turned into a PyObject* via py::convert()
            template <typename RawType,
                      typename std::enable_if_t<
                              !std::is_same<RawType, pyptr_t>::value &&
                               py::ref::can_convert<RawType>::value,
                      int> = 0>
            ref(RawType&& raw)
                :referent(py::convert(std::forward<RawType>(raw)))
                {}
            
            template <typename RawType,
                      typename std::enable_if_t<
                              !std::is_same<RawType, pyptr_t>::value &&
                               py::ref::can_convert<RawType>::value,
                      int> = 0>
            ref& operator=(RawType&& raw) {
                Py_XDECREF(referent);
                referent = py::convert(std::forward<RawType>(raw));
                return *this;
            }
            
            /// virtual destructor, Py_XDECREFs the referent pointer
            virtual ~ref();
            
            /// explicitly set and Py_INCREF a new referent --
            /// -- and optionally a new boolean value for 'destroy' --
            /// ... self-returning, for chainability
            ref const& set(pyptr_t);
            ref const& set(pyptr_t, bool);
            
            /// implicit and explicit getters for the internal PyObject*
            operator pyptr_t() const noexcept;
            pyptr_t* operator&() const noexcept;
            pyptr_t operator->() const noexcept;
            pyptr_t get() const noexcept;
            
            /// refcount control methods, mapped to their macro namesakes
            ref const& inc() const;
            ref const& dec() const;
            ref const& xinc() const;
            ref const& xdec() const;
            ref&      clear();
            
            ref const& inc(std::size_t) const;
            ref const& dec(std::size_t) const;
            ref const& xinc(std::size_t) const;
            ref const& xdec(std::size_t) const;
            
            /// std::shared_ptr-esque calls, for explicit lifecycle termination
            pyptr_t release() noexcept;
            ref& reset();
            ref& reset(pyptr_t);
            
            /// member swap and friend swap
            void swap(ref& other) noexcept;
            friend void swap(ref& lhs, ref& rhs) noexcept;
            
            /// member hash method
            std::size_t hash() const;
            
            /// boolean-test methods and boolean-conversion operator
            bool empty() const noexcept;
            bool truth() const;
            bool none() const;
            explicit operator bool() const noexcept;
            
            /// wrappers for PyObject_RichCompareBool()
            bool operator==(ref const&) const;
            bool operator!=(ref const&) const;
            bool  operator<(ref const&) const;
            bool operator<=(ref const&) const;
            bool  operator>(ref const&) const;
            bool operator>=(ref const&) const;
            
            /// stringification
            std::string const repr() const;
            std::string const to_string() const;
            operator std::string() const;
            friend std::ostream& operator<<(std::ostream&, ref const&);
            
        private:
            
            ref(ref const&);                    /// NO COPYING
            ref& operator=(ref const&);         /// EYES ON YOUR OWN POINTER
        
        protected:
            
            mutable pyptr_t referent = nullptr; /// the object in question
            bool destroy = true;
    };